--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../static/style.css">
     <title>Waste Management</title>
 </head>
 <body >
 
 
-    <h1 >Welcome to your Waste Management Web-App</h1>
+    <h1 >Welcome to your <b>Waste Management</b> Web-App</h1>
     <div>
         <table>
             <tr>
@@ -82,13 +82,13 @@
    
     <div>
         <p class="Bold">
-            Your total score is : <span id="total" class="Bold"></span>
+            Your total score is : <span id="total" class="Bold">{{value}}</span>
         </p>
     </div>
     <div>
         <p id="result" style="display: none; color: green;">Good job! Your Purchases are environmentally friendly.</p>
     </div>
-    <script src="JS.js"></script>
+    <script src="../static/JS.js"></script>
     
 </body>
 </html>
