--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                         <input type="text" id="product" name="product_3 " placeholder="Exemple: Bottle of Water..." required ></th>
                     </th>
                     <th id="No_border">
-                        <label>Choose the material of your product:</label>
+                        <label>What is the packaging made of?</label>
                         <input list="description_product" name="description"  id="description" placeholder="Select" required>
                 <datalist id="description_product" class="divider"> 
                         <option value="Glass"></option>
