--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
         </p>
     </div>
     <div>
-        <p id="result" style="display: none; color: green;">Good job! Your Purchases are environmentally friendly.</p>
+        <p id="result" style="display: none; color: rgb(20, 235, 20);">Good job! Your Purchases are environmentally friendly.</p>
     </div>
     <script src="../static/JS.js"></script>
     
